# File-transfer

./: README.md  buildear.bat  el como.txt  main.py  pyproject.toml  requirements.txt
assets/: manifest.json
layout/: show_text.py
